--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,12 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "server": "src/main.server.ts",
+            "prerender": true,
+            "ssr": {
+              "entry": "server.ts"
+            }
           },
           "configurations": {
             "production": {
@@ -99,6 +104,6 @@
     }
   },
   "cli": {
-    "analytics": "d1a4db7a-6f9b-4fbf-a0b4-72e129129ee3"
+    "analytics": "cf36e0eb-6cf4-4cd4-bfc4-943dc44164be"
   }
 }
