--- a/angular.json
+++ b/angular.json
@@ -32,12 +32,7 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -104,6 +99,6 @@
     }
   },
   "cli": {
-    "analytics": "cf36e0eb-6cf4-4cd4-bfc4-943dc44164be"
+    "analytics": "ac115837-4479-45c2-9f2f-5f863bf8bef4"
   }
 }
